Fix #14442: Glossary index is not updated on Glossary deletion (#14638)
* Fix #14442: Glossary index is not updated on Glossary deletion

* Fix #14442: update SearchIndexApp to add Glossary

* Add Glossary to other config schema

---------

Co-authored-by: mohitdeuex <mohit.y@deuexsolutions.com>